--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,36 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@(game: Game)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <title>Play! Catan</title>
+  <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+  <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @play20.welcome(message, style = "Java")
+  <script src="@routes.Assets.versioned("js/vertex.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.versioned("js/hex.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.versioned("js/board.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.versioned("js/game.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.versioned("js/main.js")" type="text/javascript"></script>
+  </head>
+  <body>
+    <div id="game-container">
+      <canvas id="game-canvas"></canvas>
+      <div id="player-controls"></div>
+    </div>
 
-}
+    <script type="text/template" id="game-view-template">
+      <div class="build-controls">
+        <button type="button" class="build-button settlement-button">Settlement</button>
+        <button type="button" class="build-button road-button">Road</button>
+      </div>
+      <div class="current-player">
+        Current Player: <span class="color-<%= color.toLowerCase() %> player-name"><%= name %></span>
+      </div>
+    </script>
+  </body>
+</html>
