--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,10 +8,12 @@
   <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+  <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 
   <script src="@routes.Assets.versioned("js/vertex.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.versioned("js/edge.js")" type="text/javascript"></script>
   <script src="@routes.Assets.versioned("js/hex.js")" type="text/javascript"></script>
   <script src="@routes.Assets.versioned("js/board.js")" type="text/javascript"></script>
   <script src="@routes.Assets.versioned("js/game.js")" type="text/javascript"></script>
@@ -25,8 +27,8 @@
 
     <script type="text/template" id="game-view-template">
       <div class="build-controls">
-        <button type="button" class="build-button settlement-button">Settlement</button>
-        <button type="button" class="build-button road-button">Road</button>
+        <button type="button" class="build-button settlement-button" data-role="SETTLEMENT">Settlement</button>
+        <button type="button" class="build-button road-button" data-role="ROAD">Road</button>
       </div>
       <div class="current-player">
         Current Player: <span class="color-<%= color.toLowerCase() %> player-name"><%= name %></span>
